[package]
name = "json_value_description"
description = "Json Value Description is a package for outputting a description of unstructured data parsed by Serde Json into a Value."
repository = "https://github.com/chills42/json_value_description"
readme = "README.md"
categories = ["data-structures", "development-tools::debugging"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Craig Hills <chills@gmail.com>"]
edition = "2018"

[dependencies]
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_json = "^1.0.0"

